--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.0",
+    "@apollo/client": "^3.6.9",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
+    "next": "^12.3.0",
+    "next-superjson": "^0.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-simple-typewriter": "^4.0.2",
+    "style-loader": "^3.3.1",
+    "superjson": "^1.10.0",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "eslint": "8.23.1",
