--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@graphcms/rich-text-react-renderer": "^0.6.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
+    "html-react-parser": "^1.4.0",
     "next": "^12.3.0",
     "next-superjson": "^0.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-multi-carousel": "^2.6.5",
     "react-simple-typewriter": "^4.0.2",
+    "sass": "^1.42.1",
     "style-loader": "^3.3.1",
     "superjson": "^1.10.0",
+    "swr": "^1.0.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
